; ModuleID = '/home/carl/AnghaBench/libgit2/tests/stash/extr_drop.c_test_stash_drop__cannot_drop_a_non_existing_stashed_state.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/stash/extr_drop.c_test_stash_drop__cannot_drop_a_non_existing_stashed_state.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@repo = common dso_local global i32 0, align 4
@GIT_ENOTFOUND = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_stash_drop__cannot_drop_a_non_existing_stashed_state() #0 {
  %1 = call i32 (...) @push_three_states()
  %2 = load i32, i32* @repo, align 4
  %3 = call i32 @git_stash_drop(i32 %2, i32 666)
  %4 = load i32, i32* @GIT_ENOTFOUND, align 4
  %5 = call i32 @cl_git_fail_with(i32 %3, i32 %4)
  %6 = load i32, i32* @repo, align 4
  %7 = call i32 @git_stash_drop(i32 %6, i32 42)
  %8 = load i32, i32* @GIT_ENOTFOUND, align 4
  %9 = call i32 @cl_git_fail_with(i32 %7, i32 %8)
  %10 = load i32, i32* @repo, align 4
  %11 = call i32 @git_stash_drop(i32 %10, i32 3)
  %12 = load i32, i32* @GIT_ENOTFOUND, align 4
  %13 = call i32 @cl_git_fail_with(i32 %11, i32 %12)
  ret void
}

declare dso_local i32 @push_three_states(...) #1

declare dso_local i32 @cl_git_fail_with(i32, i32) #1

declare dso_local i32 @git_stash_drop(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
